force-app/main/default/objects/ProductMix__c/ProductMix__c.object-meta.xml
<CustomObject>
    <label>Mix de Produtos</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mix de Produto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mix de Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>