force-app/main/default/objects/ProductMix__c/fields/ComboPromotion__c.field-meta.xml
<CustomField>
    <fullName>ComboPromotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combos e Promoções</label>
    <referenceTo>ComboPromotion__c</referenceTo>
    <relationshipLabel>Mix de Produtos</relationshipLabel>
    <relationshipName>Mix_de_Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>