force-app/main/default/objects/ProductMix__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Produto</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Mix de Produtos</relationshipLabel>
    <relationshipName>Mix_de_Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>